LG-11861 Fix Spacing In PO Search Results (#1198)
* Add to readme on how to get po search mock data

* create css file for po search results

* alpha order, add new css to list

* changelog: User-Facing Improvements, PO Search Results, Style PO Search Results

* add space

* Add class to html to be more selective

* remove nesting in css

--- a/_includes/components/post-office-search.html
+++ b/_includes/components/post-office-search.html
@@ -1,5 +1,6 @@
 <div
   id="post-office-search"
+  class="find-a-participating-post-office"
   data-address-search-url="{{ site.po_search_address_search_url }}"
   data-locations-search-url="{{ site.po_search_locations_search_url }}"
 ></div>
