Upgrade to LGDS 9.0 to reset prose styling

--- a/_includes/components/2-col.html
+++ b/_includes/components/2-col.html
@@ -1,5 +1,5 @@
-<div class="container container--mod {{ include.class }} page-content__prose">
-  <div class="one-account page-content__prose tablet:grid-row">
+<div class="container container--mod {{ include.class }} usa-prose">
+  <div class="one-account usa-prose tablet:grid-row">
     <div class="tablet:grid-col-6 pad-left-element">
       <img
         alt=""
@@ -12,7 +12,7 @@
       {{ include.col1 | markdownify }}
     </div>
   </div>
-  <div class="how-it-works page-content__prose">
+  <div class="how-it-works usa-prose">
     <div class="banner-text">
       {{ include.bannertext | markdownify }}
     </div>
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div class="secure-account-container grid-row">
-    <div class="page-content__prose tablet:grid-col-6">
+    <div class="usa-prose tablet:grid-col-6">
       {{ include.col2 | markdownify }}
     </div>
     <div class="image-container tablet:grid-col-6">
