--- a/_layouts/help.html
+++ b/_layouts/help.html
@@ -9,7 +9,7 @@ includes_touchpoints: true
 
 <div class="container container--mod">
   <div class="page-content grid-row">
-    <div class="page-content__prose grid-col-12 desktop:grid-col-8 help-article">
+    <div class="usa-prose grid-col-12 desktop:grid-col-8 help-article">
       <h1>{{page.title}}</h1>
       {{ page.content | markdownify }}
       <div
