--- a/_layouts/sidenav.html
+++ b/_layouts/sidenav.html
@@ -45,7 +45,7 @@ below. Note: This does not apply to Help pages, which is far more complex. {% en
 <div class="container">
   <div class="page-content container--mod grid-row">
     <div class="desktop:display-none grid-col-12 margin-bottom-3">{{ sidenav }}</div>
-    <div class="page-content__prose grid-col-12 desktop:grid-col-8">
+    <div class="usa-prose grid-col-12 desktop:grid-col-8">
       {{ content }}
       <a href="#main-content" class="anchor-to-top">{{ site.data[page.lang].settings.nav.anchor_to_top }}</a>
     </div>
