--- a/_sass/components/partners/_hero.scss
+++ b/_sass/components/partners/_hero.scss
@@ -20,7 +20,7 @@
   }
   .hero__description {
     font-size: 1.125rem;
-    line-height: $line-height;
+    line-height: line-height($theme-body-font-family, $theme-body-line-height);
     @include at-media('desktop') {
       font-size: 1.25rem;
     }
