--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -26,7 +26,7 @@
 
     @include at-media('tablet-lg') {
       font-size: 1.375rem;
-      line-height: $line-height;
+      line-height: line-height($theme-header-font-family, $theme-heading-line-height);
     }
   }
 
@@ -38,6 +38,6 @@
 
   p {
     font-size: $base-font-size;
-    line-height: $line-height;
+    line-height: line-height($theme-body-font-family, $theme-body-line-height);
   }
 }
