--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -91,7 +91,7 @@ article.container,
   }
 }
 
-.page-content__prose hr {
+.usa-prose hr {
   @include u-border-top(1px, 'base-lighter');
   @include u-margin-top(4);
 }
