--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,7 +2,10 @@
   $theme-utility-breakpoints: (
     'tablet': true,
     'desktop': true,
-  )
+  ),
+  $theme-text-measure: none,
+  $theme-body-line-height: 6,
+  $theme-heading-line-height: 6
 );
 @forward 'uswds';
 @forward '../../_sass/index';
