Apply use-prose targeted to immediate content parent

--- a/_includes/components/2-col.html
+++ b/_includes/components/2-col.html
@@ -1,5 +1,5 @@
-<div class="container container--mod {{ include.class }} usa-prose">
-  <div class="one-account usa-prose tablet:grid-row">
+<div class="container container--mod {{ include.class }}">
+  <div class="one-account tablet:grid-row">
     <div class="tablet:grid-col-6 pad-left-element">
       <img
         alt=""
@@ -8,25 +8,25 @@
         src="{{ site.baseurl }}/assets/img/what-is-one-account@2x.png"
       />
     </div>
-    <div class="tablet:grid-col-6">
+    <div class="tablet:grid-col-6 usa-prose">
       {{ include.col1 | markdownify }}
     </div>
   </div>
-  <div class="how-it-works usa-prose">
-    <div class="banner-text">
+  <div class="how-it-works">
+    <div class="banner-text usa-prose">
       {{ include.bannertext | markdownify }}
     </div>
     <div class="text-container grid-row">
-      <div class="text-column tablet:grid-col-6 pad-left-element">
-          <img
-            alt=""
-            aria-hidden="true"
-            class="how-it-works-image"
-            src="{{ site.baseurl }}/assets/img/how-it-works1@2x.png"
-          />
+      <div class="text-column tablet:grid-col-6 pad-left-element usa-prose">
+        <img
+          alt=""
+          aria-hidden="true"
+          class="how-it-works-image"
+          src="{{ site.baseurl }}/assets/img/how-it-works1@2x.png"
+        />
         {{ include.bannercol1 | markdownify }}
       </div>
-      <div class="text-column tablet:grid-col-6">
+      <div class="text-column tablet:grid-col-6 usa-prose">
         <img
           alt=""
           aria-hidden="true"
@@ -50,5 +50,4 @@
       />
     </div>
   </div>
-
 </div>
