--- a/_sass/components/_language-picker.scss
+++ b/_sass/components/_language-picker.scss
@@ -36,22 +36,30 @@
 .language-picker__label--button {
   @include typeset($theme-button-font-family, null, 1);
   @include u-radius($theme-button-border-radius);
-  background-position: right units(1.5) center;
-  background-position-y: calc(50% + 2px);
-  padding: units(1.5);
-  padding-right: units(3);
+  padding: units(1);
+  padding-left: units(1.5);
 
   &.usa-accordion__button[aria-expanded='false'],
   &.usa-accordion__button[aria-expanded='true'] {
-    background-size: 0.8125rem;
+    background-image: none;
   }
 
-  &.usa-accordion__button[aria-expanded='false'] {
-    background-image: url(../img/angle-arrow-down.svg);
+  .language-picker__label-text {
+    margin-left: units(1);
+    margin-right: units(0.5);
+  }
+}
+
+.language-picker__expander {
+  margin: -1px 0;
+  transition: transform $project-easing;
+
+  @media (prefers-reduced-motion) {
+    transition: none;
   }
 
-  &.usa-accordion__button[aria-expanded='true'] {
-    background-image: url(../img/angle-arrow-up.svg);
+  .usa-accordion__button[aria-expanded='true'] & {
+    transform: rotate(-180deg);
   }
 }
 
