Add comment listing include parameters
See: https://github.com/GSA-TTS/identity-site/pull/1207#discussion_r1516750289

Co-authored-by: Zach Margolis <zachmargolis@users.noreply.github.com>

--- a/_includes/components/2-col.html
+++ b/_includes/components/2-col.html
@@ -1,3 +1,12 @@
+{% comment %}
+includes
+- class
+- col1
+- bannertext
+- bannercol1
+- bannercol2
+- col2
+{% endcomment %}
 <div class="container container--mod {{ include.class }}">
   <div class="one-account tablet:grid-row">
     <div class="tablet:grid-col-6 pad-left-element">
