--- a/_includes/language_picker.html
+++ b/_includes/language_picker.html
@@ -8,7 +8,7 @@
       <span id="language-picker-{{ include.id }}-description" class="language-picker__label-text">
         {{ site.data.[page.lang].settings.global.language }}
       </span>
-      {% include components/icon.html icon='expand_more' size=3 class='language-picker__expander' %}
+      {% include components/icon.html icon='expand_more' icon_size=3 class='language-picker__expander' %}
     </button>
   {% else %}
     <div class="language-picker__label language-picker__label--text">
