Use common "Back to top" link styling for partners

--- a/_layouts/partners/faq.html
+++ b/_layouts/partners/faq.html
@@ -21,7 +21,7 @@ layout: base
                       Expand all General FAQ
                     </button>
                   </div>
-                  <div class="usa-accordion usa-accordion--bordered margin-bottom-5">
+                  <div class="usa-accordion usa-accordion--bordered margin-bottom-1">
                       {% for item in page.general_accordion %}
                         <h3 class="usa-accordion__heading">
                           <button
@@ -38,7 +38,7 @@ layout: base
                         </div>
                       {% endfor %}
                   </div>
-                  <a href="#main-content">Back to Top</a>
+                  <a href="#main-content" class="usa-link anchor-to-top">Back to top</a>
                   <div class="section-title-row margin-top-5">
                     <div id="logistics-section" class="section-title-left">{{ page.logistics_section_title | markdownify}}</div>
                     <button
@@ -47,7 +47,7 @@ layout: base
                       Expand all Logistics FAQ
                     </button>
                   </div>
-                  <div class="usa-accordion usa-accordion--bordered margin-bottom-5">
+                  <div class="usa-accordion usa-accordion--bordered margin-bottom-1">
                       {% for item in page.logistics_accordion %}
                         <h3 class="usa-accordion__heading">
                           <button
@@ -64,7 +64,7 @@ layout: base
                         </div>
                       {% endfor %}
                   </div>
-                  <a href="#main-content">Back to Top</a>
+                  <a href="#main-content" class="usa-link anchor-to-top">Back to top</a>
                   <div class="section-title-row margin-top-5">
                     <div id="development-section" class="section-title-left">{{ page.development_section_title | markdownify}}</div>
                     <button
@@ -73,7 +73,7 @@ layout: base
                       Expand all Development FAQ
                     </button>
                   </div>
-                  <div class="usa-accordion usa-accordion--bordered margin-bottom-5">
+                  <div class="usa-accordion usa-accordion--bordered margin-bottom-1">
                       {% for item in page.development_accordion %}
                         <h3 class="usa-accordion__heading">
                           <button
@@ -90,7 +90,7 @@ layout: base
                         </div>
                       {% endfor %}
                   </div>
-                  <a href="#main-content">Back to Top</a>
+                  <a href="#main-content" class="usa-link anchor-to-top">Back to top</a>
                 </div>
                 <div class="tablet:grid-col-3">
                   <section>
