Add initializer script to base layout

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,11 +4,7 @@
   <head>
     {% include meta.html %}
     {% include styles.html %}
-    {% include google_analytics.html %}
-    {% include osc_analytics.html %}
-    {% include dap.html %}
-    {% include gtm_head.html %}
-    {% include google_recaptcha.html %}
+    {% include head_scripts.html %}
   </head>
 
   <body class="{{ layout.body.class }} {{ page.body.class }} lang-{{ page.lang }}">
