Upgrade to LGDS 9.0 to reset prose styling (#1207)
* Upgrade to LGDS 9.0 to reset prose styling

* Apply use-prose targeted to immediate content parent

* Remove alert element outside maintenance window

* Style page content section as prose

* Remove text measure override

Restore max line width within prose

* Update to LGDS 9.0 final release

* Update import for navigation component

* Refine margins for prose icon lists

* Add comment listing include parameters

See: https://github.com/GSA-TTS/identity-site/pull/1207#discussion_r1516750289

Co-authored-by: Zach Margolis <zachmargolis@users.noreply.github.com>

* Restore link styling to "Back to top" link

* Restore link styling for help articles

* Use common "Back to top" link styling for partners

---------

Co-authored-by: Zach Margolis <zachmargolis@users.noreply.github.com>

--- a/_layouts/help.html
+++ b/_layouts/help.html
@@ -9,7 +9,7 @@ includes_touchpoints: true
 
 <div class="container container--mod">
   <div class="page-content grid-row">
-    <div class="page-content__prose grid-col-12 desktop:grid-col-8 help-article">
+    <div class="usa-prose grid-col-12 desktop:grid-col-8 help-article">
       <h1>{{page.title}}</h1>
       {{ page.content | markdownify }}
       <div
@@ -18,7 +18,7 @@ includes_touchpoints: true
         data-yes="{{ site.data[page.lang].settings.feedback_form.yes }}"
         data-no="{{ site.data[page.lang].settings.feedback_form.no }}"
       ></div>
-      <a href="#main-content" class="anchor-to-top">{{ site.data[page.lang].settings.nav.anchor_to_top }}</a>
+      <a href="#main-content" class="usa-link anchor-to-top">{{ site.data[page.lang].settings.nav.anchor_to_top }}</a>
     </div>
     <div class="display-none desktop:display-block grid-offset-1 grid-col-3">
       {% include help/nav_sidenav.html %}
