--- a/_includes/dap.html
+++ b/_includes/dap.html
@@ -1,7 +1,9 @@
+{% if site.dap_agency and site.dap_subagency %}
 <!-- We participate in the US government's analytics program. See the data at analytics.usa.gov. -->
 <script
   async
   type="text/javascript"
-  src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=GSA&subagency=TTS"
+  src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency={{ site.dap_agency }}&subagency={{ site.dap_subagency }}"
   id="_fed_an_ua_tag"
 ></script>
+{% endif %}
