--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,3 +1,4 @@
+{% if site.tts_ga_ua_id %}
 <!-- Initialize analytics for the TTS Google Analytics account -->
 <script>
   (function (i, s, o, g, r, a, m) {
@@ -19,8 +20,9 @@
     "https://www.google-analytics.com/analytics.js",
     "ga"
   );
-  ga("create", "UA-48605964-44", "auto");
+  ga("create", "{{ site.tts_ga_ua_id }}", "auto");
   ga("set", "anonymizeIp", true);
   ga("set", "forceSSL", true);
   ga("send", "pageview");
 </script>
+{% endif %}
