Include Google Tag Manager

--- a/_includes/gtm_body.html
+++ b/_includes/gtm_body.html
@@ -1,4 +1,6 @@
+{% if site.gtm_id %}
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M3KZGM4"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm_id }}"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+{% endif %}
