Update reCAPTCHA render condition to check site key

--- a/_includes/google_recaptcha.html
+++ b/_includes/google_recaptcha.html
@@ -1,4 +1,4 @@
-{% if site.recaptcha_site_key and site.recaptcha_org_id %}
+{% if site.recaptcha_site_key %}
 <script src="https://www.google.com/recaptcha/api.js"></script>
 <script>
   function timestamp() {
