--- a/_includes/help/nav_sidenav.html
+++ b/_includes/help/nav_sidenav.html
@@ -3,7 +3,7 @@
   <ul class="usa-accordion usa-sidenav">
     {% for subpage in site.help_pages %}
       {% assign related_questions = site.help | where_exp: "item", "item.category == subpage.name and item.lang == page.lang and item.child == nil or item.child == false" | sort:'order' %}
-      {% if page.url contains subpage.url %}
+      {% if page.url contains subpage.name %}
         {% assign is_initially_hidden = 'false' %}
       {% else %}
         {% assign is_initially_hidden = 'true' %}
@@ -15,7 +15,7 @@
         {% assign page_lang = '' %}
       {% endif %}
       <a href="{{ subpage.url | prepend: '/help/' | locale_url }}"
-        class="{% if page.url contains subpage.url %}usa-current{% endif %}">
+        class="{% if page.url contains subpage.name %}usa-current{% endif %}">
         {{ site.data[page.lang]["settings"]["help_subpages"][subpage.name] }}
       </a>
       <ul class="usa-sidenav__sublist" aria-hidden="{{ is_initially_hidden }}">
