--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -407,6 +407,7 @@
     onSubmit="return remapvalues(this); return true;"
     class="usa-form"
   >
+    <input type="hidden" name="00NU0000004z90b" id="00NU0000004z90b" value="{{ site.data.language_map.languages[page.lang] }}" />
     <input type="hidden" name="retURL" value="https://login.gov{{ '/' | locale_url }}" />
     <input type="hidden" name="orgid" value="{{ site.contact_form_orgid }}" />
     <input type="hidden" name="status" id="status" value="New" />
