--- a/_layouts/partners/impact-story.html
+++ b/_layouts/partners/impact-story.html
@@ -18,6 +18,13 @@ layout: base
                     <div class="partners-body padding-top-2">{{ page.challenge | markdownify }}</div>
                     <div class="partners-body padding-top-2">{{ page.solution | markdownify }}</div>
                     <div class="partners-body padding-top-2">{{ page.impact | markdownify }}</div>
+                    {% if page.callout_tips %}                    
+                        <div class="grid-row grid-gap-6">
+                            <div class="tablet:grid-col-12 partners-subtitle partners-blue-box">
+                              <div>{{ page.callout_tips | markdownify }}</div>
+                            </div>
+                        </div>
+                    {% endif %}
                     <div class="partners-body padding-top-2 padding-bottom-2">{{ page.key_shifts | markdownify }}</div>
                     <a href="{{ '/partners/impact-stories/' | locale_url }}" class="partners-body caret">Read more impact stories</a>
                 </div>
