Add linting, remove div

--- a/_layouts/partners/get-started.html
+++ b/_layouts/partners/get-started.html
@@ -59,7 +59,7 @@ layout: base
             <div class="grid-row grid-gap-6">
                 <div id = "iaa-anchor" class="tablet:grid-col-12">{{ page.iaa_steps_title | markdownify }}</div>
                 <div class="tablet:grid-col-6 partners-subtitle partners-blue-box">
-                    <div>{{ page.iaa_tips | markdownify }}</div>
+                    {{ page.iaa_tips | markdownify }}
                 </div>
                 <div class="tablet:grid-col-6 partners-body">
                     <ol class="usa-process-list usa-process-list--connected">
