LG-13114: DOL Impact Story (#1242)
* Add DOL impact story

---------

Co-authored-by: Andrew Duthie <1779930+aduth@users.noreply.github.com>

--- a/_layouts/partners/state-and-local.html
+++ b/_layouts/partners/state-and-local.html
@@ -50,7 +50,7 @@ layout: base
           {{ page.igca_steps_title | markdownify }}
         </div>
         <div class="tablet:grid-col-6 partners-subtitle partners-blue-box">
-          <div>{{ page.igca_tips | markdownify }}</div>
+          {{ page.igca_tips | markdownify }}
         </div>
         <div class="tablet:grid-col-6 partners-body">
           <ol class="usa-process-list usa-process-list--connected">
