Update link to touchpoint js

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,6 +9,5 @@
 <script src="{{ _src | relative_url }}"></script>
 {% endfor %}{% endfor %}
 {% if layout.includes_touchpoints %}
-  <script src="https://touchpoints.app.cloud.gov/touchpoints/58f51d4d.js"></script>
-  <script src="{{'/assets/js/touchpoints_translations.js' | relative_url}}"></script>
+  <script src="{{'/assets/js/touchpoints.js' | relative_url}}"></script>
 {% endif %}
