fix banner link

--- a/_includes/already_have_an_account_banner.html
+++ b/_includes/already_have_an_account_banner.html
@@ -15,7 +15,7 @@
           {{ site.data.[page.lang].settings.banner.already-have-an-account.text }}
         </h3>
         <p class="margin-bottom-0">
-          <a class="one-account-banner__link" href="https://secure.login.gov">
+          <a class="one-account-banner__link" href="{{ site.data.[page.lang].settings.banner.already-have-an-account.link }}">
             {{ site.data.[page.lang].settings.banner.already-have-an-account.sign_in }}
           </a>
         </p>
