Pass locale parameter in Post Office search to translate results

--- a/_includes/components/post-office-search.html
+++ b/_includes/components/post-office-search.html
@@ -3,6 +3,7 @@
   class="find-a-participating-post-office"
   data-address-search-url="{{ site.po_search_address_search_url }}"
   data-locations-search-url="{{ site.po_search_locations_search_url }}"
+  data-page-lang="{{ page.lang }}"
 ></div>
 
 {% assign timestamp = site.time | date: '%s' %}
