--- a/_includes/search.html
+++ b/_includes/search.html
@@ -11,7 +11,7 @@
   role="search"
 >
   <input name="utf8" type="hidden" value="&#x2713;" />
-  <input name="affiliate" type="hidden" value="login.gov" />
+  <input name="affiliate" type="hidden" value="{{ site.search_affiliate[page.lang] }}" />
   {% if include.collection %}
     <input name="dc" type="hidden" value="{{ include.collection }}" />
   {% endif %}
