--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -408,8 +408,8 @@
     class="usa-form"
   >
     <input type="hidden" name="00NU0000004z90b" id="00NU0000004z90b" value="{{ site.data.language_map.languages[page.lang] | default: 'English' }}" />
-    <input type="hidden" name="00N3R00000AdDdq" id="00N3R00000AdDdq" value="" />
-    <input type="hidden" name="00N3R00000AdDdr" id="00N3R00000AdDdr" value="" />
+    <input type="hidden" name="00N3d0000013vIB" id="00N3d0000013vIB" value="" />
+    <input type="hidden" name="00N3d0000013vIC" id="00N3d0000013vIC" value="" />
     <input type="hidden" name="retURL" value="https://login.gov{{ '/' | locale_url }}" />
     <input type="hidden" name="orgid" value="{{ site.contact_form_orgid }}" />
     <input type="hidden" name="status" id="status" value="New" />
