LG-14155: Update Chinese translation (#1318)
* Update translation

Co-authored-by: Zach Margolis <zachmargolis@users.noreply.github.com>

--- a/_includes/sign_in.html
+++ b/_includes/sign_in.html
@@ -2,6 +2,7 @@
   class="{{include.mobile}} usa-button sign-in-logo"
   href="{{ site.idp_base_url }}/{% if page.lang!= 'en' %}{{page.lang}}{% endif %}"
   tabindex="0"
-  >{{ site.data.[page.lang].settings.nav.sign_in }}
-  <span>Login.gov</span>
+  >
+  {% assign sign_in_text = site.data[page.lang].settings.nav.sign_in | replace: '{{APP_NAME}}', '<span>Login.gov</span>' %}
+  {{ sign_in_text }}
 </a>
