Update SBA DLAP to SBA

--- a/_layouts/contact_us.html
+++ b/_layouts/contact_us.html
@@ -5,7 +5,7 @@ common_applications:
   - USAJOBS
   - Internal Revenue Service (IRS)
   - 'PBGC-MyPBA'
-  - SBA DLAP
+  - SBA
   - Social Security Administration (SSA)
   - Trusted Traveler Programs (Global Entry/Nexus/Sentri)
 ---
