--- a/_layouts/partners/program-update.html
+++ b/_layouts/partners/program-update.html
@@ -18,8 +18,8 @@ layout: base
             <time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: "%B %d, %Y" }}</time>
           </div>
           <div class="partners-border"></div>
-          <div class="partners-body padding-top-205">{{ page.content | markdownify }}</div>
-          <a href="{{ '/partners/program-updates/' | locale_url }}" class="partners-body caret">Read more program updates</a>
+          <div class="partners-body padding-top-3 padding-bottom-2">{{ page.content | markdownify }}</div>
+          <a href="{{ '/partners/program-updates/' | locale_url }}" class="caret">Read more program updates</a>
         </div>
       </div>
     </article>
