--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -237,7 +237,11 @@
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.account_locked | escape_quotes }}',
         ),
         new TopicEntry(
-          'In-Person Proofing',
+          'Facial matching',
+          '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.facial_matching | escape_quotes }}',
+        ),
+        new TopicEntry(
+          'In Person Proofing',
           '{{ site.data.[page.lang].settings.contact_page.support_request_form.subtopics.cant_proof_in_person | escape_quotes }}',
         ),
         // new TopicEntry(
